# 4diac-fbe

./: .gitignore  .gitmodules  NOTICE.md  README.md
configurations/: debug.txt  native-toolchain.txt
configurations/inc/: default.txt  minimal.txt
configurations/test/: test-aarch64.txt  test-all.txt  test-clang.txt  test-freertos-raspi3.txt  test-freertos-zynq.txt  test-gnu.txt  test-macos.txt  test-minimal.txt  test-native.txt  test-revpi.txt  test-w64.txt  test-win.txt  test-winxp.txt
dependencies/recipes/boost/: build.cmake  package.txt
dependencies/recipes/bzip2/: build.cmake  package.txt
dependencies/recipes/forte/: build.cmake  dynamic-link-wrapper.c
dependencies/recipes/freertos/: build.cmake  demoapp.cmake  package.txt  requirements.txt
dependencies/recipes/freertos-cpp11/: bugfix.diff  build.cmake  extra.cpp  package.txt
dependencies/recipes/libmodbus/: build.cmake  package.txt
dependencies/recipes/libpcap/: build.cmake  package.txt
dependencies/recipes/libressl/: build.cmake  getentropy_win.c  inet_pton.h  package.txt
dependencies/recipes/luajit/: build.cmake  package.txt
dependencies/recipes/open62541/: build.cmake  inet_pton.h  package.txt
dependencies/recipes/openpowerlink/: build.cmake  package.txt
dependencies/recipes/paho.mqtt.c/: build.cmake  (+1 more)
modules/EclipseGeneratedFBs/: .gitignore  CMakeLists.txt  README.txt
modules/FreeRTOS-Standalone/: CMakeLists.txt  bcm2837.c  main.c  zynq7000.c
scripts/: HelloWorld.fboot  compile.cmd  compile.sh  install.cmd  install.sh  package.sh  run-build-test.sh  test-basic-execution.sh
(+29 files in other folders)
